# poo-2024

./: CMakeLists.txt  README.md
aula1/: CMakeLists.txt  horario.h  livros.h  main  main.cpp
aula2/: main.cpp  vetorD.h
aula3/: .fracao.h.swp  .main.cpp.swp  data06_12_2024.txt  fracao.h  main  main.cpp
aula4/: array.h
inventario/: inventario.h  main.cpp
livros/: livro.h  main
p1/inventario/: main
p1/livros/: main.cpp
p1/pedidos/: main  pedido.h
p3/: p2  p2.cpp
pedidos/: main.cpp
sobrecarga/: example  example.cpp  main  main.cpp  meuint.h  p2  p2.cpp  prova  prova.cpp  trabalho  trabalho.cpp
